--- a/src/common/Layout/Layout.css
+++ b/src/common/Layout/Layout.css
@@ -1,9 +1,14 @@
 .layout-header {
   flex-basis: 80px;
   background-color: antiquewhite;
+
   display: flex;
   justify-content: center;
   align-items: center;
+
+  font-size: 30px;
+  font-weight: bold;
+  font-family: cursive;
 }
 
 .layout-content {
@@ -14,6 +19,7 @@
 .layout-footer {
   flex-basis: 50px;
   background-color: gold;
+
   display: flex;
   justify-content: center;
   align-items: center;
