--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -6,15 +6,29 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
 }
 
+/* Defaults & Mobile */
 .App {
-  position: relative;
-  top: 10vh;
-  height: 80vh;
-  margin: auto;
-  width: 60vh;
-  border: 2px solid orange;
   display: flex;
   flex-direction: column;
+
+  height: 100vh;
+  width: 100vw;
+}
+
+/* Desktop */
+@media (min-width: 500px) and (min-height: 500px) {
+  .App {
+    position: relative;
+    top: 10vh;
+    height: 80vh;
+    width: 60vh;
+    margin: auto;
+
+    border-radius: 15px;
+    overflow: hidden;
+    box-shadow: 1px 10px 25px 0px rgba(0, 0, 0, 0.2);
+  }
 }
